ubo-common/src/main/resources/META-INF/resources/scss/_ubo-forms.scss
/*  _ubo-forms.scss
 */

// Extra large devices (large desktops)
// set the defaults for all responsive levels here
// no (xl) media query necessary (desktop first)

  // fix bootstrap custom-select for older browser
  // see https://caniuse.com/?search=appearance
  .custom-select {
    -moz-appearance:none;
    -webkit-appearance:none;
    overflow: hidden;
  }

  // shortcut-classes for forms
  .mycore-form-label {
    @extend .col-lg-3;
    @extend .col-md-3;
    @extend .col-sm-3;
    @extend .justify-content-sm-end;
    @extend .pl-0;
    @extend .mr-3;
  }

  // actually used for input AND select AND textarea
  .mycore-form-input {
    @extend .form-control;
    @extend .col-lg-6;
    @extend .col-md-6;
    @extend .col-sm-6;
  }

  .mycore-form-input-double {
    @extend .form-control;
    @extend .col-lg-3;
    @extend .col-md-3;
    @extend .col-sm-3;
  }

  .form-control.ubo-repeater-button-box:hover {
    border: 1px solid $primary;
  }
  .form-control {
    &.ubo-repeater-button-box {
      display: flex;
    }
  }
  .form-inline {
    align-items: flex-start;
    padding-top: 0.375rem;
    label {
      margin-top: 0.375rem;
    }
  }
  .mycore-form-label {
    text-align: right;
  }
  .mycore-form-input-group {
    flex: 0 0 50%;
    max-width: 50%;
  }

  .ubo-repeater-button-box {
    padding: 0;
    margin-left: 0.5rem;
    .xeditor-pmud {
      font-size: 1.125rem;
      &:hover {
        font-size: 1.125rem;
      }
    }
  }

  .ubo-tags-group {
    .ubo-repeater-button-box {
      @extend .mb-1, .mr-1;
      margin-left: 0;
    }
  }

  .ubo-pl-noresults, .ubo-input-error, .ubo-pl-results, .ubo-pl-userlist {
    margin-left: 27%;
    margin-top: -10px;
    margin-bottom: 20px;
  }

  .ubo-pl-deluser {
    @extend .text-danger;
  }

  .ubo-pl-adduser {
    @extend .text-success;
  }

  .ubo-input-invalid,
  .ubo-input-check {
    margin-left: 27%;
  }

  .ubo-vue-form .form-group > .mycore-form-input {
    max-width: 60%;
    flex: 0 0 60%;
  }

  .ubo-vue-form .form-group > .mycore-form-input:not(:last-child) {
    border-right: 1px solid #ced4da !important;
  }

  .ubo-vue-form .form-group > .is-invalid.mycore-form-input {
    border-right: 1px solid #dc3545 !important;
  }

  .input-group-between {
    margin-right: -$input-border-width;
    margin-left: -$input-border-width;
    .input-group-text {
      border-radius: 0;
    }
  }

  .form-control::placeholder, .mycore-form-input-double::placeholder, .mycore-form-input::placeholder {
    opacity: 0.4;
  }

  .bootstrap-select .btn {
    background-color: transparent !important;
    border-color: transparent !important;
    padding: 0 !important;
  }

// Large devices (desktops) and below: <= 1200px
@include media-breakpoint-down(lg) {
// add/overwrite styles for responsive level lg and lower
}

// Medium devices (tablets) and below: <= 992px
@include media-breakpoint-down(md) {
// add/overwrite styles for responsive level md and lower
}

// Small devices (landscape phones) and below: <= 768px
@include media-breakpoint-down(sm) {
// add/overwrite styles for responsive level sm and lower
}

// Extra small devices (portrait phones): <= 576px
@include media-breakpoint-down(xs) {
// add/overwrite styles for responsive level xs
  .mycore-form-label {
    text-align: left;  // label got own row and should be left then
  }
  .mycore-form-input {
    width: 60%;  // prevent line break in forms
  }
  .ubo-input-invalid,
  .ubo-input-check {
    margin-left: 0;
  }
}


input#pid:placeholder-shown {
  border-color: $danger;
}

i.ubo-picker-service-LocalService::before {
  color: $primary;
  content: "\f276";
}

i.ubo-picker-service-LDAPWithLocalService::before {
  color: $primary;
  content: "\f19c";
}

